# image-pattern

./: Makefile  README.md  README.rst  README.ru.md  mypy.ini  pyproject.toml
.github/workflows/: test.yml
django_example/example_app/: image_patterns.py  models.py  tests.py
example/example/: settings.py
example/example_app/: tests.py
example/example_app/migrations/: 0001_initial.py
examples/: avatar.py
image_pattern/: __init__.py  context.py  layers.py  patterns.py  size.py
image_pattern/contrib/: django.py
image_pattern/elements/: __init__.py  base.py  canvas.py  rectangle.py  text.py
tests/: patterns.py  settings.py  test_image_pattern.py  test_image_patterns.py
